--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "TrueTweet Platform Backend",
     "main": "dist/main.js",
     "scripts": {
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
         "dev": "tsx watch src/main.ts",
         "start": "node dist/main.js",
         "test": "vitest",
@@ -56,6 +56,7 @@
         "@types/swagger-ui-express": "^4.1.6",
         "@vitest/coverage-v8": "^3.2.4",
         "supertest": "^7.1.4",
+        "tsc-alias": "^1.8.16",
         "tsx": "^4.19.2",
         "typescript": "^5.7.2",
         "vitest": "^3.2.4"
