chore: add pretty log format for dev mode

--- a/env.example
+++ b/env.example
@@ -26,7 +26,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=info
-LOG_FORMAT=json
+LOG_FORMAT=pretty
 
 # Cache Configuration
 CACHE_TTL=3600
